# etf-radar

./: .gitignore  README.md
backend/: pyproject.toml
backend/migrations/: 001_user_holdings.sql  002_user_events.sql  003_membership.sql  004_notify.sql  005_holdings_free_limit.sql
backend/research/breadth-calibration/: README.md  eval_breadth.py
backend/scripts/: __init__.py  backfill_snapshots.py
backend/src/: config_loader.py  health_monitor.py  holdings_pipeline.py  models.py  pipeline.py  stocks_continuity.py  stocks_daily_pipeline.py  stocks_history_pipeline.py  stocks_spot_pipeline.py
backend/src/etl/: calendar.py  standardize.py
backend/src/market_breadth/: __init__.py  industry_mapping.py  pipeline.py  (+3 more)
backend/tests/: test_akshare_em_provider.py  test_akshare_provider.py  test_akshare_sina_provider.py  test_archiver.py  test_calendar.py  test_config_loader.py  test_descriptions.py  test_health_monitor.py  test_holdings_pipeline.py  test_holdings_provider.py  test_http_retry.py  test_leader_rule.py  test_mapping.py  test_market_breadth.py  test_models.py  test_models_holdings.py  test_no_regress.py  test_notify_alert.py  test_notify_changes.py  test_notify_digest.py  test_output_schemas.py  test_pipeline_archive.py  test_pipeline_compute_outputs.py  test_pipeline_provider_chain.py  test_pipeline_smoke.py  test_pipeline_stocks_spot_integration.py  test_pipeline_write_latest_guard.py  test_provider_base.py  test_reconcile.py  test_returns.py  test_self_breadth.py  test_signals.py  test_snapshots_index.py  test_standardize.py  test_stock_history_provider.py  test_stock_indicators.py  test_stock_industry_pipeline.py  test_stock_spot_provider.py  test_stocks_continuity.py  test_stocks_daily_pipeline.py  (+6 more)
(+1110 files in other folders)
