[project]
name = "etf-radar-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0",
    "yfinance>=0.2.40",
    "akshare>=1.13.0",
    "chinese-calendar>=1.11.0",
    "pandas-market-calendars>=4.4.0",
    "scipy>=1.12.0",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "responses>=0.24.0",
    "freezegun>=1.4.0",
    "jsonschema>=4.21.0",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
