[project]
name = "etf-radar-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=1.26.0",
    "pydantic>=2.13.4",
    "PyYAML>=6.0.3",
    "yfinance>=1.5.1",
    "akshare>=1.13.0",
    "chinese-calendar>=1.11.0",
    "pandas-market-calendars>=4.4.0",
    "scipy>=1.12.0",
    "tqdm>=4.68.4",
    "ta>=0.11.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "mypy>=2.2.0",
    "responses>=0.26.2",
    "freezegun>=1.5.5",
    "jsonschema>=4.21.0",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
